--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <a href="">terms & policy</a>
                 </label>
               </form>
-              <div class="signUp">Signup</div>
+              <div class="signUp"><a href="">Signup</a></div>
               <div class="or">
                 <div class="line"></div>
                 <div class="text">Or</div>
