added some id's

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <div class="signUpInterface">
               <h1>Get Started Now</h1>
               <form>
-                <label>Name</label>
-                <input type="text" placeholder="Enter your name" />
-                <label>Email Adress</label>
-                <input type="email" placeholder="Enter your email" />
-                <label>Password</label>
-                <input type="password" placeholder="Name" />
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Enter your name" />
+                <label for="email">Email Adress</label>
+                <input type="email" id="email" placeholder="Enter your email" />
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Name" />
                 <label class="checkBox">
                   <input type="checkbox" /> I agree to the
                   <a href="">terms & policy</a>
